src/components/Carousel/carousel.css
.carousel {
    position: relative;
    color: var(--white);
  
    img {
      border-radius: 10px;
      height: 255px;
      width: 100%;
      object-fit: cover;
    }
  
    nav  {
      display: flex;
      justify-content: space-between;
      align-items: center;
      position: absolute;
      top : 50%;
      width : 100%;
      
    }
  
    i {
      font-size: 1.5rem;
      cursor: pointer;
    }
  
    .fa-chevron-left {
      margin-left: 10px;
    }
  
    .fa-chevron-right {
      margin-right: 10px;
    }
  
    b {
      /*display: none;*/
      
    }

}

@media (min-width: 1200px) {
b .carousel-counter {
  position: absolute;
  bottom: -90px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 14px;
  color: var(--white);
  Z-index: 200;

}
}

